# pico-stdio-usb-simple

./: CMakeLists.txt  LICENSE  README.md  reset_interface.c  stdio_usb_simple.c  usb_descriptors.c
include/: tusb_config.h
include/pico/: stdio_usb.h
